--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			<p> © 2019 Jakie Gomez. All Rights Reserved. </p>
 		</div>
 
-		<script src="src/index.js"></script>
+		<script src="/src/index.js"></script>
 
 	</body>
 </html>
